--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,8 +7,14 @@ persona.nombre=Nombre
 persona.apellido=Apellido
 persona.email=Email
 persona.telefono=Telefono
+
 accion.editar=Editar
 accion.eliminar=Eliminar
 accion.nodatos=No hay Datos
 accion.guardar=Guardar
 accion.regresar=Regresar
+
+NotEmpty.persona.nombre=El campo nombre no puede ser vac\u00edo
+NotEmpty.persona.apellido=El campo apellido no puede ser vac\u00edo
+NotEmpty.persona.email=El campo email no puede ser vac\u00edo
+Email.persona.email=El formato del email no es v\u00e1lido
